# openalgo-flow

./: .gitignore  README.md  setup.bat  setup.sh  start.bat  start.sh
.VSCodeCounter/2025-12-24_22-48-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: settings.py  symbols.py  workflows.py
backend/app/core/: config.py  database.py  openalgo.py  scheduler.py
backend/app/models/: settings.py  workflow.py
backend/app/schemas/: settings.py  workflow.py
backend/app/services/: executor.py
docs/: constants.md  openalgo-nodesdk.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/edges/: InsertableEdge.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/nodes/: PlaceOrderNode.tsx  StartNode.tsx  TimeConditionNode.tsx  WaitUntilNode.tsx  index.ts
frontend/src/components/panels/: ConfigPanel.tsx  NodePalette.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Settings.tsx
frontend/src/stores/: settingsStore.ts  workflowStore.ts
frontend/src/types/: index.ts
